second commit to feat/hb

--- a/gitTest.html
+++ b/gitTest.html
@@ -10,6 +10,6 @@
     </head>
     <body>
         <h1>first commit to master</h1>
-        <h1>first commit to feat/hb</h1>
+        <h1>second commit to feat/hb</h1>
     </body>
 </html>
