--- a/gitTest.html
+++ b/gitTest.html
@@ -9,6 +9,6 @@
         <script src="main.js"></script>
     </head>
     <body>
-        <h1>second commit to master</h1>
+        <h1>third commit to master</h1>
     </body>
 </html>
