first commit to feat/head

--- a/gitTest.html
+++ b/gitTest.html
@@ -9,11 +9,8 @@
         <script src="main.js"></script>
     </head>
     <body>
-<<<<<<< HEAD
         <h1>third commit to master</h1>
-=======
-        <h1>first commit to master</h1>
-        <h1>second commit to feat/hb</h1>
->>>>>>> feat/hb
+        <h1>second commit to master</h1>
+        <h1>first commit to feat/head</h1>
     </body>
 </html>
