--- a/gitTest.html
+++ b/gitTest.html
@@ -9,7 +9,7 @@
         <script src="main.js"></script>
     </head>
     <body>
-        <h1>fourth commit to master</h1>
+        <h1>fifth commit to master</h1>
         <h1>second commit to feat/hb</h1>
         <h1>first commit to feat/head</h1>
         <h1>first commit to feat/body</h1>
